{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 19,
  "lineage": "854b5359-72d4-7045-0b09-2a528ab3be94",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:688184989092:route-table/rtb-0d1db3a1e0bad7cac",
            "default_route_table_id": "rtb-0d1db3a1e0bad7cac",
            "id": "rtb-0d1db3a1e0bad7cac",
            "owner_id": "688184989092",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "daenamu-vpc-default"
            },
            "tags_all": {
              "Name": "daenamu-vpc-default"
            },
            "timeouts": null,
            "vpc_id": "vpc-0880e34bdd55d5dfc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.daenamu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:688184989092:security-group/sg-090329db4471184f5",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-090329db4471184f5",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "688184989092",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "daenamu-vpc-default"
            },
            "tags_all": {
              "Name": "daenamu-vpc-default"
            },
            "vpc_id": "vpc-0880e34bdd55d5dfc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.daenamu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02a953ec50cb8d7bf",
            "arn": "arn:aws:ec2:ap-northeast-2:688184989092:elastic-ip/eipalloc-02a953ec50cb8d7bf",
            "domain": "vpc",
            "id": "eipalloc-02a953ec50cb8d7bf",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-52-78-230-131.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "52.78.230.131",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "daenamu-vpc-natgw"
            },
            "tags_all": {
              "Name": "daenamu-vpc-natgw"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:688184989092:internet-gateway/igw-04e14271c954428fb",
            "id": "igw-04e14271c954428fb",
            "owner_id": "688184989092",
            "tags": {
              "Name": "daenamu-vpc-igw"
            },
            "tags_all": {
              "Name": "daenamu-vpc-igw"
            },
            "vpc_id": "vpc-0880e34bdd55d5dfc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.daenamu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02a953ec50cb8d7bf",
            "association_id": "eipassoc-0094ea91d2d2ef149",
            "connectivity_type": "public",
            "id": "nat-08f70b8a786d825b9",
            "network_interface_id": "eni-0bb9b45cfa652152b",
            "private_ip": "10.194.0.236",
            "public_ip": "52.78.230.131",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0cc1a21c487be0ca4",
            "tags": {
              "Name": "daenamu-vpc-natgw"
            },
            "tags_all": {
              "Name": "daenamu-vpc-natgw"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_gateway",
            "aws_subnet.public",
            "aws_vpc.daenamu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_worldwide",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0310c3ab13e8b23071080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-08f70b8a786d825b9",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0310c3ab13e8b2307",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_gateway",
            "aws_nat_gateway.this",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.daenamu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_worldwide",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04e14271c954428fb",
            "id": "r-rtb-0bf5a0909d86655121080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bf5a0909d8665512",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_vpc.daenamu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:688184989092:route-table/rtb-0310c3ab13e8b2307",
            "id": "rtb-0310c3ab13e8b2307",
            "owner_id": "688184989092",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "daenamu-vpc-private"
            },
            "tags_all": {
              "Name": "daenamu-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0880e34bdd55d5dfc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.daenamu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:688184989092:route-table/rtb-0bf5a0909d8665512",
            "id": "rtb-0bf5a0909d8665512",
            "owner_id": "688184989092",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "daenamu-vpc-public"
            },
            "tags_all": {
              "Name": "daenamu-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0880e34bdd55d5dfc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.daenamu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0210dc9d8c33e91b7",
            "route_table_id": "rtb-0310c3ab13e8b2307",
            "subnet_id": "subnet-03ca79f3c8ebe441d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.daenamu_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c5d1384b77f394ea",
            "route_table_id": "rtb-0310c3ab13e8b2307",
            "subnet_id": "subnet-0e38afb571c441c38"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.daenamu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-001053f43755ae9a0",
            "route_table_id": "rtb-0bf5a0909d8665512",
            "subnet_id": "subnet-0cc1a21c487be0ca4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.daenamu_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08b9897c39335a955",
            "route_table_id": "rtb-0bf5a0909d8665512",
            "subnet_id": "subnet-0eeadcc15994d4874"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.daenamu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:688184989092:subnet/subnet-03ca79f3c8ebe441d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.194.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03ca79f3c8ebe441d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "688184989092",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "daenamu-vpc-private-1",
              "karpenter.sh/discovery": "daenamu-vpc",
              "kubernetes.io/cluster/daenamu-vpc": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "daenamu-vpc-private-1",
              "karpenter.sh/discovery": "daenamu-vpc",
              "kubernetes.io/cluster/daenamu-vpc": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0880e34bdd55d5dfc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.daenamu_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:688184989092:subnet/subnet-0e38afb571c441c38",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.194.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e38afb571c441c38",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "688184989092",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "daenamu-vpc-private-2",
              "karpenter.sh/discovery": "daenamu-vpc",
              "kubernetes.io/cluster/daenamu-vpc": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "daenamu-vpc-private-2",
              "karpenter.sh/discovery": "daenamu-vpc",
              "kubernetes.io/cluster/daenamu-vpc": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0880e34bdd55d5dfc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.daenamu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:688184989092:subnet/subnet-0cc1a21c487be0ca4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.194.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cc1a21c487be0ca4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "688184989092",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "daenamu-vpc-public-1",
              "karpenter.sh/discovery": "daenamu-vpc",
              "kubernetes.io/cluster/daenamu-vpc": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "daenamu-vpc-public-1",
              "karpenter.sh/discovery": "daenamu-vpc",
              "kubernetes.io/cluster/daenamu-vpc": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0880e34bdd55d5dfc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.daenamu_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:688184989092:subnet/subnet-0eeadcc15994d4874",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.194.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eeadcc15994d4874",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "688184989092",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "daenamu-vpc-public-2",
              "karpenter.sh/discovery": "daenamu-vpc",
              "kubernetes.io/cluster/daenamu-vpc": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "daenamu-vpc-public-2",
              "karpenter.sh/discovery": "daenamu-vpc",
              "kubernetes.io/cluster/daenamu-vpc": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0880e34bdd55d5dfc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.daenamu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "daenamu_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:688184989092:vpc/vpc-0880e34bdd55d5dfc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.194.0.0/16",
            "default_network_acl_id": "acl-06ed103384876c1a7",
            "default_route_table_id": "rtb-0d1db3a1e0bad7cac",
            "default_security_group_id": "sg-090329db4471184f5",
            "dhcp_options_id": "dopt-0eeb2887c389c73f5",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0880e34bdd55d5dfc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d1db3a1e0bad7cac",
            "owner_id": "688184989092",
            "tags": {
              "Name": "daenamu-vpc"
            },
            "tags_all": {
              "Name": "daenamu-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}